# rust-real-time-risk-engine

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: lib.rs
crates/risk_calculator/: Cargo.toml
crates/risk_calculator/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/: streaming_architecture.mmd
examples/: real_time_risk.rs
