[package]
name = "rtre-market_data"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"

